Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13476

Fix the way the registry values are saved by NtSaveKey helpers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • NTCore
    • None
    • June 2017
    • 63,495

    Description

      The CmpCopyKeyValueList helper introduced in 63495 to implement NtSaveKey is half-broken (it doesn't copy the value data of the keys, doesn't set the value list cell index of the value list, etc...).

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              hbelusca hbelusca
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: